--- a/app/src/main/res/layout/custom_dialog_ingame.xml
+++ b/app/src/main/res/layout/custom_dialog_ingame.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1.5"
         android:background="@drawable/custom_dialog_background_2">
         <TextView
             android:layout_width="wrap_content"
@@ -21,11 +21,10 @@
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="20dp"
-        android:layout_weight="8"
+        android:layout_weight="8.5"
         >
         <ImageView
             android:id="@+id/bulb"
@@ -44,13 +43,95 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:textColor="@color/yellow_700"/>
         <LinearLayout
-            android:layout_marginTop="20dp"
+            android:id="@+id/tip_text"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/tip_ingame"
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="200dp">
+
+            <ScrollView
+                android:padding="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Write words in box and click on add button to add in the list below"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Add as many words as you can until timer runs out (Check for the timer on top left corner)"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="You can also chech on how many words you have added on top right corner"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Once you have managed to add required number of words the timer will stop automatically on last word added and you can then see you score"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="You can leave the game and you stats will not be saved (Game Over)"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Your timer will start when you click the start button below make sure to relax and do your best"
+                    android:textAlignment="center"
+                    android:textColor="#666666"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:textSize="15dp"/>
+                </LinearLayout>
+            </ScrollView>
 
         </LinearLayout>
+        <Button
+            android:id="@+id/test_my_mind_id"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/tip_text"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:background="@drawable/round_button_yellow"
+            android:text="Test My Mind"
+            android:textAllCaps="false"
+            android:textSize="16dp"
+            android:textColor="#666666"/>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/test_my_mind_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Good Luck ;-)"
+            android:layout_centerHorizontal="true"
+            style="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:textColor="@color/yellow_700"/>
     </RelativeLayout>
 
 </LinearLayout>
